welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value asmile
	if (asmile  && bsmile  ){
            ^monkeyTrouble:4: error: not found: value asmile
	} else if (!asmile && !bsmile) {
                    ^