welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if (asmile  && bsmile  ){
		return true
	} else if (!asmile && !bsmile) {
		return true
	} else { return false}
}
